# prj-envoy-v2

./: BUILD.bazel  README.md  WORKSPACE  deps.bzl  go.mod  go.sum
control-mechanism/api/: BUILD.bazel
control-mechanism/control-plane/: BUILD.bazel  atai-dynamic-config.com.crt  atai-dynamic-config.com.key  ca.crt  custom-ca-certificates.crt  main.go
control-mechanism/control-plane/protos/: BUILD.bazel  api_handler.proto
control-mechanism/control-plane/utilhandlers/: BUILD.bazel  callbackshandler.go  resourcehandler.go  serverhandler.go
envoys/: BUILD.bazel
services/api-v1/: BUILD.bazel  main.go
services/api-v1/routehandlers/: BUILD.bazel  defaulthandler.go
services/api-v1/utilhandlers/: BUILD.bazel  appserverhandler.go
services/api-v2/: BUILD.bazel  main.go
services/api-v2/routehandlers/: BUILD.bazel
services/api-v2/utilhandlers/: BUILD.bazel  appserverhandler.go
utils/certs/: atai-dynamic-config.com.csr  ca.key  ca.srl
utils/configs/: BUILD.bazel  front-proxy-config.yaml
utils/scripts/: init_networks.sh  run-front-proxy.sh
