load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "api_lib",
    srcs = ["main.go"],
    importpath = "github.com/Gogistics/prj-envoy-v2/control-mechanism/api",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "api",
    embed = [":api_lib"],
    visibility = ["//visibility:public"],
)
