load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "utilhandlers",
    srcs = [
        "callbackshandler.go",
        "resourcehandler.go",
        "serverhandler.go",
    ],
    importpath = "github.com/Gogistics/prj-envoy-v2/control-mechanism/control-plane/utilhandlers",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_envoyproxy_go_control_plane//envoy/config/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/config/core/v3:core",
        "@com_github_envoyproxy_go_control_plane//envoy/config/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/config/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane//envoy/config/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/filters/network/http_connection_manager/v3:http_connection_manager",
        "@com_github_envoyproxy_go_control_plane//envoy/extensions/transport_sockets/tls/v3:tls",
        "@com_github_envoyproxy_go_control_plane//envoy/service/cluster/v3:cluster",
        "@com_github_envoyproxy_go_control_plane//envoy/service/discovery/v3:discovery",
        "@com_github_envoyproxy_go_control_plane//envoy/service/endpoint/v3:endpoint",
        "@com_github_envoyproxy_go_control_plane//envoy/service/listener/v3:listener",
        "@com_github_envoyproxy_go_control_plane//envoy/service/route/v3:route",
        "@com_github_envoyproxy_go_control_plane//envoy/service/runtime/v3:runtime",
        "@com_github_envoyproxy_go_control_plane//envoy/service/secret/v3:secret",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/types",
        "@com_github_envoyproxy_go_control_plane//pkg/cache/v3:cache",
        "@com_github_envoyproxy_go_control_plane//pkg/server/v3:server",
        "@com_github_envoyproxy_go_control_plane//pkg/wellknown",

        "@com_github_golang_protobuf//ptypes:go_default_library_gen",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//credentials",
        "@org_golang_google_grpc//keepalive",
    ],
)
